# openclaw-skills

./: .gitignore  CLAUDE.md  README.md  openclaw_sync.yaml  openclaw_sync_cronjob.sh  pyproject.toml  setup_env.sh
configs/: openclaw_sync.yaml
hooks/: README.md
mcps/: README.md
openclaw/: OVERVIEW.md  architecture.md  channels.md  commands.md  deployment.md  hooks.md  mcp.md  plugins.md  skills.md  workspace.md
personas/: AGENTS.md  README.md
personas/child_tutor/: CURRICULUM.md  LANGUAGE_POLICY.md  MEMORY_child.md  SOUL_child.md  TEACHING_STRATEGY.md
personas/child_tutor/chinese_reader/: SOUL.md  TEACHING_STRATEGY.md
personas/child_tutor/coding_coach/: SOUL.md  TEACHING_STRATEGY.md
personas/child_tutor/english_partner/: README.md  SOUL.md  TEACHING_STRATEGY.md
personas/child_tutor/math_coach/: SOUL.md  TEACHING_STRATEGY.md
personas/daniel_machine/: DECISION.md  IDENTITY.md  MEMORY.md  ROADMAP.md  SOUL.md  USER.md
personas/openclaw_main_agent/: AGENTS.md
personas/openclaw_main_agent/memory/: 2026-02-20-0859.md
plugins/: README.md
scripts/: openclaw_sync.py  openclaw_sync_cronjob.sh  package_skill.sh  setup_env.sh  telegram_setup_guide.md
skills/github-kb/: SKILL.md
skills/github-kb/references/: gh-commands.md
skills/kids-coding/: DEPENDENCIES.md
skills/kids-coding/assets/: TutorScene_template.py  narration_template.json
skills/kids_coding/: SKILL.md
skills/kids_coding/assets/: LLM_PROMPT_GUIDE.md
skills/tutor/: DEPENDENCIES.md  SKILL.md
skills/tutor/assets/: LLM_PROMPT_GUIDE.md  TutorScene_template.py  narration_template.json  (+1 more)
(+8 files in other folders)
